--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,3 +12,8 @@ build:
 
 mkdocs:
   configuration: dist/mkdocs.yml
+
+# Optionally declare the Python requirements required to build your docs
+python:
+  install:
+  - requirements: dist/docs/requirements.txt
